<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context="com.example.harshmodi.calc.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@color/textview"
        android:elevation="50dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/calculator_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-thin"
            android:lines="1"
            android:maxLength="10"
            android:orientation="vertical">


            <TextView
                android:id="@+id/previewTextView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingEnd="@dimen/padding_right"
                android:paddingLeft="@dimen/padding_right"
                android:paddingRight="@dimen/padding_right"
                android:textAlignment="viewEnd" />


            <TextView
                android:id="@+id/resultTextView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:paddingRight="5dp"
                android:textAlignment="viewEnd"
                android:textSize="50sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:elevation="25dp"
            android:orientation="vertical">

            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/number_one"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/one"
                    android:textColor="@color/text"
                    android:textSize="@dimen/text"

                    />

                <Button
                    android:id="@+id/number_two"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/two"
                    android:textColor="@color/text"
                    android:textSize="@dimen/text" />

                <Button
                    android:id="@+id/number_three"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/three"
                    android:textColor="@color/text"
                    android:textSize="@dimen/text" />

            </LinearLayout>

            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/number_four"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/four"
                    android:textColor="@color/text"
                    android:textSize="@dimen/text" />

                <Button
                    android:id="@+id/number_five"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/five"
                    android:textColor="@color/text"
                    android:textSize="@dimen/text" />

                <Button
                    android:id="@+id/number_six"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/six"
                    android:textColor="@color/text"
                    android:textSize="@dimen/text" />

            </LinearLayout>

            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/number_seven"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/seven"
                    android:textColor="@color/text"
                    android:textSize="@dimen/text" />

                <Button
                    android:id="@+id/number_eight"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/eight"
                    android:textColor="@color/text"
                    android:textSize="@dimen/text" />

                <Button
                    android:id="@+id/number_nine"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/nine"
                    android:textColor="@color/text"
                    android:textSize="@dimen/text" />

            </LinearLayout>

            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/number_zero"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/zero"
                    android:textColor="@color/text"
                    android:textSize="@dimen/text" />

                <Button
                    android:id="@+id/button_clear"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/clear_calc"
                    android:textColor="@color/text"
                    android:textSize="@dimen/text" />

                <Button
                    android:id="@+id/button_equals"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/equals"
                    android:textColor="@color/text"
                    android:textSize="@dimen/text" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/operators"
            android:elevation="-20dp"
            android:orientation="vertical"
            android:textColor="@color/text"
            android:textSize="@dimen/text">

            <Button
                android:id="@+id/button_plus"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/plus"
                android:textColor="@color/text"
                android:textSize="@dimen/op" />

            <Button
                android:id="@+id/button_minus"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/minus"
                android:textColor="@color/text"
                android:textSize="@dimen/op" />

            <Button
                android:id="@+id/button_multiply"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/multiply"
                android:textColor="@color/text"
                android:textSize="@dimen/op" />

            <Button
                android:id="@+id/button_divide"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/divide"
                android:textColor="@color/text"
                android:textSize="@dimen/op" />

            <Button
                android:id="@+id/button_power"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/power"
                android:textColor="@color/text"
                android:textSize="@dimen/op" />

            <Button
                android:id="@+id/button_root"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/sqrt"
                android:textColor="@color/text"
                android:textSize="@dimen/op" />

            <Button
                android:id="@+id/button_abs"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/abs"
                android:textColor="@color/text"
                android:textSize="@dimen/op" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
